# LaberintIA_FrameWork

./: .gitignore  confi_cad.ipynb  distance_sensor.py  environment.py  implementation_plan.md  laberinto_mujoco.xml  repomix-output-tree-master.md  tools.py  train.py
lbrintia/: environment.py  train.py
lbrintia/assets/: robot_scenario.launch
model/: HexaBot.xml  Laberinto.xml  Robot.sdf  Robot.xml  config.json  model.config  scene.xml
model/assets/: base.part  base.stl  hc_c.part  hc_c.stl  hc_l.part  hc_l.stl  hc_r.part  hc_r.stl  part_1.part  part_1__2.part
rbt_ws/src/laberintia_crtll/: package.xml  setup.cfg  setup.py
rbt_ws/src/laberintia_crtll/launch/: laberintia.gazebo.launch.py  laberintia.urdf.launch.py
rbt_ws/src/laberintia_crtll/meshes/laberintia_mdl/: Coordinates  part_1__2.stl
rbt_ws/src/laberintia_crtll/xacro/laberintia/: base.xacro  robot.xacro  sensors.xacro  wheel.xacro
rbt_ws/src/robot_scenario/: CMakeLists.txt  package.xml
rbt_ws/src/robot_scenario/launch/: empty_world.launch  laberintia.gazebo.launch  laberintia.urdf.launch
rbt_ws/src/robot_scenario/meshes/laberintia_mdl/: part_1.stl
rbt_ws/src/robot_scenario/xacro/: materials.xacro
rbt_ws/src/robot_scenario/xacro/laberintia/: base.xacro  sensors.xacro  wheel.xacro
rbt_ws/src/velodyne/: bitbucket-pipelines.yml
rbt_ws/src/velodyne/velodyne_description/: CMakeLists.txt  package.xml
rbt_ws/src/velodyne/velodyne_description/urdf/: HDL-32E.urdf.xacro  VLP-16.urdf.xacro  example.urdf.xacro
rbt_ws/src/velodyne/velodyne_gazebo_plugins/: CMakeLists.txt  package.xml
rbt_ws/src/velodyne/velodyne_gazebo_plugins/include/velodyne_gazebo_plugins/: GazeboRosVelodyneLaser.h
rbt_ws/src/velodyne/velodyne_gazebo_plugins/src/: GazeboRosVelodyneLaser.cpp
rbt_ws/src/velodyne/velodyne_simulator/: CMakeLists.txt  package.xml
tools/: labo.py  traslate.py
